Smooth Vertices (Laplacian) produces NaN coordinates for loose vertices and edges #89214

Closed
opened 2021-06-16 21:08:35 +02:00 by Fen · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 3.0.0 Alpha. Commit hash: 247abdbf41
Worked: Broken back to 2.65, which is around when the operator was introduced

I was missing build info, so I filled the above in manually

Short description of error
The Smooth Vertices (Laplacian) (bpy.ops.mesh.vertices_smooth_laplacian()) will generate NaN coordinates for any vertex or edge that is not part of a face.

This only happens if at least one face exists. A mesh with no faces does not trigger this bug.

Exact steps for others to reproduce the error

  1. Delete the starting objects
  2. Create a plane
  3. Go into edge-select mode and duplicate one of the plane's edges. Move it to the side a bit.
  4. Run the Smooth Vertices (Laplacian) operator. The edge should disappear, and its Transform should now be full of nans
  5. Go into vertex-select mode and extrude one of the plane's vertices
  6. Run the operator again. The vertex should disappear, with the same nan result
  7. Go into face-select mode and select the plane's face.
  8. Duplicate the face and move it to the side
  9. Delete only faces
  10. Run the operator again. The edges should all disappear

A file with everything set up is attached:

smooth-laplacian-nan.blend

I haven't observed this with the Smooth Laplacian modifier.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 3.0.0 Alpha. Commit hash: 247abdbf4148843daf469285a6a63ab9cd0aeef9 Worked: Broken back to 2.65, which is around when the operator was introduced I was missing build info, so I filled the above in manually **Short description of error** The *Smooth Vertices (Laplacian)* (`bpy.ops.mesh.vertices_smooth_laplacian()`) will generate NaN coordinates for any vertex or edge that is not part of a face. This only happens if at least one face exists. A mesh with no faces does not trigger this bug. **Exact steps for others to reproduce the error** 1. Delete the starting objects 2. Create a plane 3. Go into edge-select mode and duplicate one of the plane's edges. Move it to the side a bit. 4. Run the *Smooth Vertices (Laplacian)* operator. The edge should disappear, and its Transform should now be full of nans 5. Go into vertex-select mode and extrude one of the plane's vertices 6. Run the operator again. The vertex should disappear, with the same nan result 7. Go into face-select mode and select the plane's face. 8. Duplicate the face and move it to the side 9. Delete only faces 10. Run the operator again. The edges should all disappear A file with everything set up is attached: [smooth-laplacian-nan.blend](https://archive.blender.org/developer/F10175797/smooth-laplacian-nan.blend) I haven't observed this with the *Smooth Laplacian* modifier.
Author

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm using Alpha 3.0.0 845f4cebad


Tested using:
OS: Windows-10-10.0.19041.630-SP0 64 Bits
GPU: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

I can confirm using Alpha 3.0.0 845f4cebadc8 --- Tested using: OS: Windows-10-10.0.19041.630-SP0 64 Bits GPU: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Added subscriber: @mano-wii

Added subscriber: @mano-wii

NaN coordinates indicate corrupted mesh that can trigger serious problems.
So I'm setting this report as having high priority.

NaN coordinates indicate corrupted mesh that can trigger serious problems. So I'm setting this report as having high priority.
Author

Yes, I was getting a lot of crashes from this. Many operators will crash Blender if given NaN coordinates.

Unfortunately, I don't understand the logic at all, so I can't help much :p . I do see that the operator and the modifier use different validate_solution functions...perhaps the modifier's does something that the operator's does not?

Yes, I was getting a *lot* of crashes from this. Many operators will crash Blender if given NaN coordinates. Unfortunately, I don't understand the logic at all, so I can't help much :p . I do see that the operator and the modifier use different `validate_solution` functions...perhaps the modifier's does something that the operator's does not?

Added subscriber: @astronotter-4

Added subscriber: @astronotter-4
AJP self-assigned this 2021-06-29 09:05:26 +02:00

I've done some digging and found the cause of the NaNs to be the initial linear system becoming filled with Infs, which in turn is because the 'areas' associated with loose edges are 0. There seem to be flags to detect 0 area already, but I believe they don't account for the system itself filling up with Inf and then giving an incorrect result.

I've done some digging and found the cause of the NaNs to be the initial linear system becoming filled with Infs, which in turn is because the 'areas' associated with loose edges are 0. There seem to be flags to detect 0 area already, but I believe they don't account for the system itself filling up with Inf and then giving an incorrect result.

This comment was removed by @astronotter-4

*This comment was removed by @astronotter-4*

This issue was referenced by ed9759349b

This issue was referenced by ed9759349b3da090d22bd34bc066b72025679dc4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89214
No description provided.