Fix T89214: Smooth Vertices (Laplacian) produces NaN coordinates

Vertices with no connected faces would attempt to divide by the combined
face area causing a divide by zero.

Use the same weight for wire vertices as vertices connected
to zero area faces.